[gd_scene load_steps=9 format=3 uid="uid://cbrnnchtile01"]

[ext_resource type="Script" uid="uid://d5o26fbo21d4" path="res://scripts/tiles/branch_tile.gd" id="1_branch"]
[ext_resource type="PackedScene" uid="uid://fila50d048jo" path="res://models/frame.glb" id="3_8gi0d"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jjq4m"]
size = Vector3(1, 0.0951538, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_brakb"]
size = Vector3(1, 0.0983887, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_brown"]
albedo_color = Color(0.55, 0.35, 0.15, 1)

[sub_resource type="BoxMesh" id="BoxMesh_brown"]
size = Vector3(3.6, 0.5, 3.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_indicator"]
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)
emission_energy_multiplier = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_indicator"]
size = Vector3(1, 0.2, 1)

[node name="BranchTile" type="StaticBody3D"]
script = ExtResource("1_branch")

[node name="frame" parent="." instance=ExtResource("3_8gi0d")]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0.0162354, 0)
shape = SubResource("BoxShape3D_jjq4m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0.019043, 0)
shape = SubResource("BoxShape3D_brakb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
material_override = SubResource("StandardMaterial3D_brown")
mesh = SubResource("BoxMesh_brown")

[node name="MainIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
material_override = SubResource("StandardMaterial3D_indicator")
mesh = SubResource("BoxMesh_indicator")

[node name="Indicator1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_indicator")
mesh = SubResource("BoxMesh_indicator")

[node name="Indicator2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
visible = false
material_override = SubResource("StandardMaterial3D_indicator")
mesh = SubResource("BoxMesh_indicator")
